@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- complete rewrite of automatic full URL conversion (now respects #anchor links and protocol-relative URLs)
 - fixed errors in package uninstall process
 - refined Package installer and uninstaller to output more usefull informations
 - added setup options to package installer to enable/disable installation of sample Resource documents
